# ml-notes

./: .gitignore  AGENTS.md  README.md  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
book/01-math/: 01-basics.md  02-limits.md  03-continuity.md  index.md
book/02-numerical-computation/: 01-numbers.md  02-numbers-live.md
